traefik/whoami-service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
  type: ClusterIP
